# BusinessCardExtr

./: .env.example  .gitignore  ANTIGRAVITY_PROMPT.md  Caddyfile  README.md  WORKFLOW_PLANNING.md  docker-compose.yml  github_push.bat  pyproject.toml  requirements.txt  ssh-key-2026-02-09.key  ssh-key-2026-02-09.key.pub
app/: cli.py  config.py  main.py  models.py
app/services/: drive_service.py  extractor_service.py  local_service.py  normalize_service.py  openrouter_client.py  sheets_service.py
app/static/: index.html
app/utils/: logging.py  validators.py
tests/: test_dedupe.py  test_extraction.py  test_normalize.py  test_openrouter.py
