[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "business-card-extractor"
version = "1.0.0"
description = "Batch business card data extraction using OpenRouter vision models"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
